# neophyte

./: .gitignore  .gitmodules  .neoconf.json  Cargo.toml  LICENSE  README.md  init.lua  rg
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: neophyte.desktop
lua/neophyte/: init.lua
neophyte-linalg/: Cargo.toml
neophyte-linalg/src/: lib.rs  mat3.rs  vec2.rs
neophyte-log-analyzer/: Cargo.toml
neophyte-log-analyzer/src/: main.rs
neophyte-macro/: Cargo.toml
neophyte-macro/src/: lib.rs
neophyte-ui/: Cargo.toml
neophyte-ui-event/: Cargo.toml
neophyte-ui-event/src/: chdir.rs  cmdline_block_append.rs  cmdline_block_show.rs  cmdline_pos.rs  cmdline_show.rs  cmdline_special_char.rs  default_colors_set.rs  grid_clear.rs  grid_cursor_goto.rs  grid_destroy.rs  grid_line.rs  grid_resize.rs  grid_scroll.rs  hl_attr_define.rs  hl_group_set.rs  lib.rs  message_content.rs  messagepack_ext_types.rs  mode_change.rs  mode_info_set.rs  msg_history_show.rs  msg_ruler.rs  msg_set_pos.rs  msg_show.rs  msg_showcmd.rs  msg_showmode.rs  option_set.rs  parse.rs  popupmenu_select.rs  popupmenu_show.rs  rgb.rs  set_icon.rs  set_title.rs  tabline_update.rs  util.rs  values.rs  win_close.rs  win_external_position.rs  win_extmark.rs  win_float_pos.rs  (+4 more)
neophyte-ui/src/: cmdline.rs  grid.rs  lib.rs  messages.rs  options.rs
packaging/aur/: neophyte.desktop
packaging/aur/neophyte/: PKGBUILD
packaging/aur/neophyte-bin/: PKGBUILD
packaging/aur/neophyte-git/: PKGBUILD
src/: assets.rs  event.rs  grid.rs  image.rs  main.rs  model.rs  neovim.rs  neovim_handler.rs  nvim.rs  rendering.rs  rpc.rs  session.rs  util.rs
src/event/: chdir.rs  cmdline_block_append.rs  cmdline_block_show.rs  cmdline_pos.rs  cmdline_show.rs  cmdline_special_char.rs  default_colors_set.rs  global_event.rs  grid_clear.rs  grid_cursor_goto.rs  grid_destroy.rs  grid_line.rs  grid_resize.rs  grid_scroll.rs  hl_attr_define.rs  hl_group_set.rs  message_content.rs  messagepack_ext_types.rs  mod.rs  mode_change.rs  mode_info_set.rs  msg_history_show.rs  msg_ruler.rs  msg_set_pos.rs  msg_show.rs  msg_showcmd.rs  msg_showmode.rs  option_set.rs  parse.rs  popupmenu_select.rs  popupmenu_show.rs  rgb.rs  set_icon.rs  set_title.rs  tabline_update.rs  types.rs  util.rs  win_close.rs  win_external_position.rs  win_extmark.rs  (+5 more)
src/event/util/: mod.rs  parse.rs
src/event_handler/: buttons.rs  mod.rs  settings.rs
src/neovim/: action.rs  button.rs  incoming.rs  mod.rs  modifiers.rs  stdin_thread.rs  stdout_thread.rs
src/rendering/: blend.wgsl  blend_pipeline.rs  blit_render_pipeline.rs  cell_fill.wgsl  cell_fill_pipeline.rs  cmdline_grid.rs  cursor.rs  cursor.wgsl  cursor_bg.rs  cursor_bg.wgsl  depth_texture.rs  emoji.wgsl  emoji_pipeline.rs  font.rs  gamma_blit.wgsl  glyph.wgsl  glyph_bind_group.rs  glyph_pipeline.rs  glyph_push_constants.rs  grid.rs  grid_bind_group_layout.rs  grids.rs  highlights.rs  message_grids.rs  mod.rs  monochrome.wgsl  monochrome_pipeline.rs  range.rs  read.rs  scrolling_grids.rs  shader.wgsl  shared.rs  state.rs  state_font.rs  state_read.rs  state_surface_config.rs  state_write.rs  surface_config.rs  targets.rs  text.rs  (+3 more)
src/rendering/cursor/: bg.rs  bg.wgsl  fg.rs  fg.wgsl  mod.rs
src/rendering/grid/: mod.rs  range.rs  scrolling_grids.rs
src/rendering/pipelines/: mod.rs
src/rendering/pipelines/blend/: mod.rs
src/rendering/pipelines/cell_fill/: cell_fill.wgsl  mod.rs
src/rendering/pipelines/composite/: composite.wgsl  mod.rs
src/rendering/pipelines/cursor/: cursor.wgsl  mod.rs
src/rendering/pipelines/default_fill/: default_fill.wgsl  mod.rs
src/rendering/pipelines/emoji/: emoji.wgsl  mod.rs
src/rendering/pipelines/gamma_blit/: gamma_blit.wgsl  mod.rs
src/rendering/pipelines/glyph/: emoji.wgsl  mod.rs  monochrome.wgsl
src/rendering/pipelines/lines/: lines.wgsl  mod.rs
src/rendering/pipelines/monochrome/: mod.rs  monochrome.wgsl
src/rendering/pipelines/png_blit/: mod.rs  png_blit.wgsl
src/rendering/pipelines/text/: mod.rs
src/rendering/scrolling_grids/: mod.rs  range.rs
src/rendering/state/: cell_fill.wgsl  font.rs  glyph.wgsl  grid.rs  highlights.rs  mod.rs  read.rs  surface_config.rs  write.rs
src/rendering/text/: bind_group.rs  mod.rs
src/text/: atlas.rs  cache.rs  font.rs  fonts.rs  mod.rs
src/text/atlas/: mod.rs  node.rs
src/ui/: actor.rs  cmdline.rs  double_buffer.rs  grid.rs  handle.rs  messages.rs  mod.rs  options.rs  packed_char.rs  print.rs  ui_thread.rs  window.rs
src/util/: double_buffer.rs  mat3.rs  mod.rs  parse.rs  vec2.rs
