[package]
name = "neophyte"
version = "0.2.3"
edition = "2021"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
categories = ["text-editors", "gui", "development-tools"]
description = "A WebGPU rendered Neovim GUI"
readme = "README.md"

[workspace]
members = ["neophyte-log-analyzer"]

[dependencies]
swash = "0.1.8"
thiserror = "1.0.44"
log = "0.4.19"
rmpv = "1.0.1"
winit = { version = "0.29.3", features = ["rwh_05",] }
wgpu = "0.18.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
png = "0.17.10"

[dependencies.font-kit]
version = "0.12.0"
default-features = false
features = ["source"]

[dependencies.flexi_logger]
version = "0.27.3"
default_features = false
features = ["colors"]

[profile.dev]
opt-level = 1
