[package]
name = "neophyte"
version = "0.3.2"
edition = "2021"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
categories = ["text-editors", "gui", "development-tools"]
description = "A WebGPU rendered Neovim GUI"
readme = "README.md"
exclude = ["/packaging", "/lua"]

[workspace]
members = [ "neophyte-linalg","neophyte-log-analyzer", "neophyte-ui", "neophyte-ui-event"]

[dependencies]
swash = "0.1.8"
thiserror = "2.0.1"
log = "0.4.19"
rmpv = "1.0.1"
wgpu = "23.0.0"
pollster = "0.4.0"
png = "0.17.10"
packed-char = "0.1.0"

[dependencies.neophyte-linalg]
path = "./neophyte-linalg"
version = "0.3.2"

[dependencies.neophyte-ui-event]
path = "./neophyte-ui-event"
version = "0.3.1"

[dependencies.neophyte-ui]
path = "./neophyte-ui"
version = "0.3.2"

[dependencies.bytemuck]
version = "1.13.1"
features = ["derive"]

[dependencies.winit]
version = "0.30.0"
features = ["rwh_05"]

[dependencies.font-kit]
version = "0.14.1"
default-features = false
features = ["source"]

[dependencies.flexi_logger]
version = "0.29.0"
default-features = false
features = ["colors"]

[profile.dev]
opt-level = 1

[profile.ci]
inherits = "release"
strip = true
lto = "fat"
codegen-units = 1
