[package]
name = "neophyte-linalg"
version = "0.3.6"
edition = "2024"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
description = "Linear algebra types for Neophyte"

[dependencies.bytemuck]
version = "1.13.1"
features = ["derive"]
optional = true

[dependencies.wgpu-types]
version = "24.0.0"
optional = true

[dependencies.winit]
version = "0.30.0"
optional = true

[features]
bytemuck = ["dep:bytemuck"]
wgpu = ["dep:wgpu-types"]
winit = ["dep:winit"]
from-impls = ["wgpu", "winit"]
all = ["bytemuck", "from-impls"]
