[package]
name = "neophyte-macro"
version = "0.2.0"
edition = "2021"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
categories = ["text-editors", "gui", "development-tools"]
description = "Procedural macros for Neophyte"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full"]
