[package]
name = "neophyte-ui-event"
version = "0.3.3"
edition = "2021"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
description = "Parsing for Neovim UI events"

[dependencies]
thiserror = "2.0.1"

[dependencies.rmpv]
version = "1.0.1"
features = ["with-serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
