[package]
name = "neophyte-ui"
version = "0.3.5"
edition = "2024"
authors = ["Tim Harding"]
repository = "https://github.com/tim-harding/neophyte"
license = "MIT"
keywords = ["neovim"]
description = "Neovim UI state management"

[dependencies]
packed-char = "0.1.0"
log = "0.4.19"

[dependencies.neophyte-ui-event]
path = "../neophyte-ui-event"
version = "0.3.5"

[dependencies.neophyte-linalg]
path = "../neophyte-linalg"
version = "0.3.6"
